--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,27 +5,42 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
+vars: 
+    clean: flutter clean
+    get: flutter pub get
+    runner: flutter pub run build_runner
+scripts: 
+    mobx_build: $runner build
+    mobx_watch: $clean & $get & $runner watch
+    mobx_build_clean: $clean & $get & $runner build --delete-conflicting-outputs
+
+
+
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter_modular:
-  mobx: 
-  flutter_mobx:
-  dio:
+  shared_preferences: ^0.5.10
+  rxdart: ^0.24.1
+  dio: ^3.0.10
+  flutter_mobx: ^1.1.0+2
+  mobx: ^1.2.1+2
+  flutter_modular: ^2.0.0+1
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.3
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
-  build_runner: 
-  mobx_codegen:
+  mockito: ^4.1.1
+  modular_codegen: ^2.0.0+1
+  mobx_codegen: ^1.1.0+1
+  build_runner: ^1.10.1
   flutter_test:
     sdk: flutter
 
-dependency_overrides:
-  analyzer: '0.39.14'
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
